tests/ui/inference/deref-suggestion.stderr
error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:10:9
   |
LL |     foo(s);
   |     --- ^ expected `String`, found `&String`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/deref-suggestion.rs:7:4
   |
LL | fn foo(_: String) {}
   |    ^^^ ---------
help: try using a conversion method
   |
LL |     foo(s.to_string());
   |          ++++++++++++

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:16:10
   |
LL |     foo3(u);
   |     ---- ^ expected `u32`, found `&u32`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/deref-suggestion.rs:14:4
   |
LL | fn foo3(_: u32) {}
   |    ^^^^ ------
help: consider dereferencing the borrow
   |
LL |     foo3(*u);
   |          +

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:32:9
   |
LL |     foo(&"aaa".to_owned());
   |     --- ^^^^^^^^^^^^^^^^^ expected `String`, found `&String`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/deref-suggestion.rs:7:4
   |
LL | fn foo(_: String) {}
   |    ^^^ ---------
help: consider removing the borrow
   |
LL -     foo(&"aaa".to_owned());
LL +     foo("aaa".to_owned());
   |

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:34:9
   |
LL |     foo(&mut "aaa".to_owned());
   |     --- ^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&mut String`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/deref-suggestion.rs:7:4
   |
LL | fn foo(_: String) {}
   |    ^^^ ---------
help: consider removing the borrow
   |
LL -     foo(&mut "aaa".to_owned());
LL +     foo("aaa".to_owned());
   |

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:36:10
   |
LL |     foo3(borrow!(0));
   |     ---- ^^^^^^^^^^ expected `u32`, found `&{integer}`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/deref-suggestion.rs:14:4
   |
LL | fn foo3(_: u32) {}
   |    ^^^^ ------

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:39:22
   |
LL |     assert_eq!(3i32, &3i32);
   |                      ^^^^^ expected `i32`, found `&i32`
   |
help: consider removing the borrow
   |
LL -     assert_eq!(3i32, &3i32);
LL +     assert_eq!(3i32, 3i32);
   |

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:42:17
   |
LL |     let s = S { u };
   |                 ^ expected `&u32`, found integer
   |
help: consider borrowing here
   |
LL |     let s = S { u: &u };
   |                 ++++

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:44:17
   |
LL |     let s = S { u };
   |                 ^ expected `&u32`, found integer
   |
help: consider borrowing here
   |
LL |     let s = S { u: &u };
   |                 ++++

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:47:17
   |
LL |     let r = R { i };
   |                 ^ expected `u32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |     let r = R { i: *i };
   |                 ++++

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:49:17
   |
LL |     let r = R { i };
   |                 ^ expected `u32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |     let r = R { i: *i };
   |                 ++++

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:57:9
   |
LL |         b
   |         ^ expected `i32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |         *b
   |         +

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:65:9
   |
LL |         b
   |         ^ expected `i32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |         *b
   |         +

error[E0308]: `if` and `else` have incompatible types
  --> $DIR/deref-suggestion.rs:71:9
   |
LL |     let val = if true {
   |               ------- `if` and `else` have incompatible types
LL |         *a
   |         -- expected because of this
LL |     } else if true {
LL |         b
   |         ^ expected `i32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |         *b
   |         +

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:82:15
   |
LL |     if foo == bar {
   |        ---    ^^^ expected `Foo`, found `&Foo`
   |        |
   |        expected because this is `Foo`
   |
help: consider dereferencing the borrow
   |
LL |     if foo == *bar {
   |               +

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0308`.
